--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -1,3 +1,9 @@
 QWidget {
     background: qlineargradient(y1: 0, y2: 1, stop: 0 #000000, stop: 1 #100022);
 }
+
+QFrame {
+    background: #ffffff;
+    border: 2px solid #ffffff;
+    border-radius: 1px;
+}
